--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/iamkanishka/Typescript-Concepts#readme",
   "devDependencies": {
     "lite-server": "^2.6.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
